changed email in index.html
 added some information in README.md

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>Email: <a href="johnmichaelfajardo499.com" target="_blank">johnmichaelfajardo499.com</a></li>
+				<li>Email: <a href="johnmichaelfajardo499.com" target="_blank">iamjohnmichaelfajardo@gmail.com</a></li>
 				<li>Mobile: 09664562096</li>
 				<li>Address: Balsik Riverside Hermosa Bataan 2111, Philippines</li>
 			</ul>
