--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>Email: <a href="johnmichaelfajardo499.com" target="_blank">iamjohnmichaelfajardo@gmail.com</a></li>
+				<li>Email: <a href="iamjohnmichaelfajardo@gmail.com" target="_blank">iamjohnmichaelfajardo@gmail.com</a></li>
 				<li>Mobile: 09664562096</li>
 				<li>Address: Balsik Riverside Hermosa Bataan 2111, Philippines</li>
-			</ul>
+			</ul>	
 		</div>
 		<div class="clear"></div>
 	</div>
